--- a/frontend/src/Css/login.css
+++ b/frontend/src/Css/login.css
@@ -1,98 +1,96 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: Aptos, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;  
-    background: white;   
+    min-height: 100vh;
+    background: white;
     /* background-image: url('../NewsApp/img/news-icon.jpg');
     background-size: cover; */
     position: relative;
-
-
 }
 
-.login-container{
+.login-container {
     width: clamp(300px, 24%, 500px);
     background-color: white;
     padding: 3rem 2rem;
-    
+    margin: auto;
     border-radius: 10px;
     box-shadow: 0 0 25px rgb(217, 217, 217);
 }
 
-.login-container .form-title{
+.login-container .form-title {
     padding: 0rem .2rem 1rem .2rem;
     text-align: center;
 }
 
-.login-container form{
+.login-container form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.input-container{
+.input-container {
     display: flex;
     flex-direction: column;
     gap: .38rem;
 }
 
-.input-container label{
+.input-container label {
     font-weight: 600;
 
 }
 
-.input-container input{
+.input-container input {
     padding: .76rem .8rem;
     border: 1px solid rgb(169, 169, 169);
     background-color: #ffffff;
 }
 
-.input-container input::placeholder{
+.input-container input::placeholder {
 
     font-weight: 500;
 }
 
 
-input:focus{
+input:focus {
     outline: 1px solid #333;
 }
 
-.input-container .btn-container{
+.input-container .btn-container {
     width: 100%;
     padding: 1.7rem 0;
 }
 
-.btn-container .submit-btn{
+.btn-container .submit-btn {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:center ;
-    padding-top:1rem;
+    align-items: center;
+    padding-top: 1rem;
 }
 
-.submit-btn button{
+.submit-btn button {
     width: 100%;
     background-color: #fff;
     color: #515151;
-    padding-inline: 3rem ;
+    padding-inline: 3rem;
     border: 2px solid #515151;
     transition: all .3s ease-in-out;
 }
 
-.submit-btn button:is(:focus-visible,:hover){
+.submit-btn button:is(:focus-visible, :hover) {
     color: white;
     background-color: #333;
 }
 
-.option-btn{
+.option-btn {
     margin-block: 2rem;
     display: flex;
     align-items: center;
@@ -100,7 +98,7 @@ input:focus{
     gap: 2rem
 }
 
-.option-btn button{
+.option-btn button {
     width: 100%;
     display: flex;
     align-items: center;
@@ -113,43 +111,44 @@ input:focus{
     padding: .8rem .6rem;
 }
 
-.btn-container .orsignuptext{
+.btn-container .orsignuptext {
     text-align: center;
-    padding: 1rem;  
+    padding: 1rem;
     font-weight: 600;
     font-size: 0.9rem;
     position: relative;
 }
 
-.orsignuptext i{
+.orsignuptext i {
     position: absolute;
     top: 30px;
     left: 20%;
-    
+
     width: 60%;
     height: 1px;
 
     background-color: #aaa;
 }
 
-.orsignuptext span{
+.orsignuptext span {
     position: absolute;
     z-index: 1;
-    
+
     background-color: #fff;
     color: #aaa;
 
     padding: 0 .2rem;
     top: 20px;
-    left: 35%;   
+    left: 35%;
 }
 
-input, button{
+input,
+button {
     border-radius: 4px;
     color: black;
 }
 
-button{
+button {
     width: max-content;
     padding: 1rem 1.2rem;
     background-color: #333;
@@ -159,43 +158,53 @@ button{
     font-weight: 600;
 }
 
-.redirect-link{
+.redirect-link {
     padding-left: .6rem;
     font-weight: 600;
     font-size: .9rem;
 }
 
-.redirect-link a{
+.redirect-link a {
     color: rgb(99, 135, 255);
     text-decoration: none;
     font-weight: 600;
 }
 
 @keyframes shuttleLeftAnimation {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: translate(0, 0);
     }
-    15%{
+
+    15% {
         transform: translate(0px, 10px);
     }
-    75%{
+
+    75% {
         transform: translate(20px, 10px);
     }
+
     50% {
         transform: translate(20px, -20px);
     }
 }
 
 @keyframes shuttleRightAnimation {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: translate(0, 0);
     }
-    15%{
+
+    15% {
         transform: translate(12px, 15px);
     }
-    75%{
+
+    75% {
         transform: translate(20px, -15px);
     }
+
     50% {
         transform: translate(30px, 20px);
     }
