--- a/frontend/src/Css/login.css
+++ b/frontend/src/Css/login.css
@@ -1,202 +1,220 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+.login-wrapper {
+  font-family: Aptos, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100vh;
 }
 
-body{
-    font-family: Aptos, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;  
-    background: white;   
-    /* background-image: url('../NewsApp/img/news-icon.jpg');
-    background-size: cover; */
-    position: relative;
+.login-container {
+  background: white;
+  position: relative;
 
+  width: clamp(300px, 24%, 500px);
+  padding: 3rem 2rem;
 
+  border-radius: 10px;
+  box-shadow: 0 0 25px rgb(217, 217, 217);
 }
 
-.login-container{
-    width: clamp(300px, 24%, 500px);
-    background-color: white;
-    padding: 3rem 2rem;
-    
-    border-radius: 10px;
-    box-shadow: 0 0 25px rgb(217, 217, 217);
+.login-container .form-title {
+  padding: 0rem 0.2rem 1rem 0.2rem;
+
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
-.login-container .form-title{
-    padding: 0rem .2rem 1rem .2rem;
-    text-align: center;
+.login-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.login-container form{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.38rem;
 }
 
-.input-container{
-    display: flex;
-    flex-direction: column;
-    gap: .38rem;
+.input-container label {
+  font-weight: 600;
 }
 
-.input-container label{
-    font-weight: 600;
-
+.input-container input {
+  padding: 0.76rem 0.8rem;
+  border: 1px solid rgb(169, 169, 169);
+  background-color: #ffffff;
 }
 
-.input-container input{
-    padding: .76rem .8rem;
-    border: 1px solid rgb(169, 169, 169);
-    background-color: #ffffff;
+.input-container input::placeholder {
+  font-weight: 500;
 }
 
-.input-container input::placeholder{
-
-    font-weight: 500;
+input:focus {
+  outline: 1px solid #333;
 }
 
-
-input:focus{
-    outline: 1px solid #333;
+.forgot-password {
+  text-align: right;
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #333;
 }
 
-.input-container .btn-container{
-    width: 100%;
-    padding: 1.7rem 0;
+.input-container .btn-container {
+  width: 100%;
+  padding: 1.7rem 0;
 }
 
-.btn-container .submit-btn{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center ;
-    padding-top:1rem;
+.btn-container .submit-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 1rem;
 }
 
-.submit-btn button{
-    width: 100%;
-    background-color: #fff;
-    color: #515151;
-    padding-inline: 3rem ;
-    border: 2px solid #515151;
-    transition: all .3s ease-in-out;
+.submit-btn button {
+  width: 100%;
+  background-color: #fff;
+  color: #515151;
+  padding-inline: 3rem;
+  border: 2px solid #515151;
+  transition: all 0.3s ease-in-out;
 }
 
-.submit-btn button:is(:focus-visible,:hover){
+.submit-btn button:is(:focus-visible, :hover) {
+  color: white;
+  background-color: #333;
+}
+
+.option-btn {
+  margin-block: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.option-btn button {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.2rem;
+  font-size: 0.8rem;
+  background-color: white;
+  border: 1px solid #333;
+  color: #747474;
+  padding: 0.8rem 0.6rem;
+}
+
+.btn-container .orsignuptext {
+  text-align: center;
+  padding: 1rem;
+  font-weight: 600;
+  font-size: 0.9rem;
+  position: relative;
+}
+
+.orsignuptext i {
+  position: absolute;
+  top: 30px;
+  left: 20%;
+
+  width: 60%;
+  height: 1px;
+
+  background-color: #aaa;
+}
+
+.orsignuptext span {
+  position: absolute;
+  z-index: 1;
+
+  background-color: #fff;
+  color: #aaa;
+
+  padding: 0 0.2rem;
+  top: 20px;
+  left: 35%;
+}
+
+input,
+button {
+  border-radius: 4px;
+  color: black;
+}
+
+button {
+  width: max-content;
+  padding: 1rem 1.2rem;
+  background-color: #333;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.redirect-link {
+  padding-left: 0.6rem;
+  font-weight: 600;
+  font-size: 0.9rem;
+}
+
+.redirect-link a {
+  color: rgb(99, 135, 255);
+  text-decoration: none;
+  font-weight: 600;
+}
+
+@media (prefers-color-scheme: dark) {
+  
+  .login-container{
+    background: #333 !important;
     color: white;
+    box-shadow: 0 0 25px #1a1a1a !important;
+  }
+
+
+  .orsignuptext span {
     background-color: #333;
-}
-
-.option-btn{
-    margin-block: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem
-}
-
-.option-btn button{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: .2rem;
-    font-size: .8rem;
-    background-color: white;
-    border: 1px solid #333;
-    color: #747474;
-    padding: .8rem .6rem;
-}
-
-.btn-container .orsignuptext{
-    text-align: center;
-    padding: 1rem;  
-    font-weight: 600;
-    font-size: 0.9rem;
-    position: relative;
-}
-
-.orsignuptext i{
-    position: absolute;
-    top: 30px;
-    left: 20%;
-    
-    width: 60%;
-    height: 1px;
-
-    background-color: #aaa;
-}
-
-.orsignuptext span{
-    position: absolute;
-    z-index: 1;
-    
-    background-color: #fff;
-    color: #aaa;
-
-    padding: 0 .2rem;
-    top: 20px;
-    left: 35%;   
-}
-
-input, button{
-    border-radius: 4px;
-    color: black;
-}
-
-button{
-    width: max-content;
-    padding: 1rem 1.2rem;
-    background-color: #333;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-}
-
-.redirect-link{
-    padding-left: .6rem;
-    font-weight: 600;
-    font-size: .9rem;
-}
-
-.redirect-link a{
-    color: rgb(99, 135, 255);
-    text-decoration: none;
-    font-weight: 600;
+  }
 }
 
 @keyframes shuttleLeftAnimation {
-    0%, 100% {
-        transform: translate(0, 0);
-    }
-    15%{
-        transform: translate(0px, 10px);
-    }
-    75%{
-        transform: translate(20px, 10px);
-    }
-    50% {
-        transform: translate(20px, -20px);
-    }
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+  15% {
+    transform: translate(0px, 10px);
+  }
+  75% {
+    transform: translate(20px, 10px);
+  }
+  50% {
+    transform: translate(20px, -20px);
+  }
 }
 
 @keyframes shuttleRightAnimation {
-    0%, 100% {
-        transform: translate(0, 0);
-    }
-    15%{
-        transform: translate(12px, 15px);
-    }
-    75%{
-        transform: translate(20px, -15px);
-    }
-    50% {
-        transform: translate(30px, 20px);
-    }
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+  15% {
+    transform: translate(12px, 15px);
+  }
+  75% {
+    transform: translate(20px, -15px);
+  }
+  50% {
+    transform: translate(30px, 20px);
+  }
 }
