--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,11 +30,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
 }
 
 h1 {
@@ -70,10 +66,6 @@ button:focus-visible {
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
 
   a:hover {
     color: #747bff;
