--- a/frontend/src/Components/SideBar/SideBar.css
+++ b/frontend/src/Components/SideBar/SideBar.css
@@ -3,10 +3,8 @@
   height: 100vh;
   background-color: #333;
   color: #fff;
-  position: fixed;
-  top: 0;
-  left: 0;
   transition: all 0.3s ease;
+  z-index: 999999;
 }
 
 .sidebar.collapsed {
@@ -22,6 +20,7 @@
   align-items: center;
   padding: 15px;
   cursor: pointer;
+  justify-content: space-between;
   background-color: #444;
 }
 
