--- a/frontend/src/Components/Home/components/cta.css
+++ b/frontend/src/Components/Home/components/cta.css
@@ -9,10 +9,13 @@
   justify-content: space-between;
   transform-style: preserve-3d;
   background-color: var(--dl-color-theme-accent2);
+  background: linear-gradient(45deg, #3a5fd6, 50%, #a940ce);
 }
+
 .cta-accent2-bg:hover {
-  transform: scale3d(1.1,1.1,1.1);
+  transform: scale3d(1.1, 1.1, 1.1);
 }
+
 .cta-accent1-bg {
   width: 100%;
   display: flex;
@@ -22,7 +25,9 @@
   justify-content: space-between;
   transform-style: preserve-3d;
   background-color: var(--dl-color-theme-accent1);
+  background: linear-gradient(45deg, #3a5fd6, 50%, #a940ce);
 }
+
 .cta-container1 {
   gap: var(--dl-space-space-threeunits);
   width: 100%;
@@ -31,21 +36,25 @@
   transition: 0.3s;
   align-items: center;
   padding-top: var(--dl-space-space-sixunits);
+  background-color: var(--dl-color-theme-neutral-dark);
+  background: linear-gradient(45deg, #3a5fd6, 50%, #a940ce);
   padding-left: var(--dl-space-space-fourunits);
   border-radius: var(--dl-radius-radius-cardradius);
   padding-right: var(--dl-space-space-fourunits);
   padding-bottom: var(--dl-space-space-sixunits);
 }
+
 .cta-container1:hover {
   color: var(--dl-color-theme-neutral-light);
-  background-color: var(--dl-color-theme-neutral-dark);
 }
+
 .cta-content {
   gap: var(--dl-space-space-oneandhalfunits);
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
+
 .cta-actions {
   gap: var(--dl-space-space-oneandhalfunits);
   flex: 1;
@@ -53,6 +62,7 @@
   align-items: flex-start;
   justify-content: flex-end;
 }
+
 @media(max-width: 767px) {
   .cta-container1 {
     gap: var(--dl-space-space-oneandhalfunits);
@@ -60,12 +70,14 @@
     justify-content: flex-start;
   }
 }
+
 @media(max-width: 479px) {
   .cta-actions {
     flex-wrap: wrap;
     align-self: stretch;
     justify-content: center;
   }
+
   .cta-button {
     flex: 1;
   }
