--- a/frontend/src/Css/CodeEditor.css
+++ b/frontend/src/Css/CodeEditor.css
@@ -1,12 +1,12 @@
 .codeEditor {
     overflow: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     position: relative;
 }
 
 .generate-doc-btn {
-    position: absolute;
-    bottom: 5rem;
-    right: 2rem;
-
+    position: fixed;
+    bottom: 2rem;
+    right: 48rem;
+    z-index: 20;
 }
