--- a/frontend/src/Components/Home/components/footer.css
+++ b/frontend/src/Components/Home/components/footer.css
@@ -80,7 +80,7 @@
   box-sizing: content-box;
   text-align: left;
   align-items: center;
-  font-family: Roboto;
+  font-family: cursive;
   font-weight: 400;
   background-color: transparent;
 }
@@ -92,7 +92,7 @@
   align-self: stretch;
   font-style: Regular;
   text-align: left;
-  font-family: "Roboto";
+  font-family: cursive;
   font-weight: 400;
   line-height: 150%;
   font-stretch: normal;
