--- a/frontend/src/Css/MarkDownEditor.css
+++ b/frontend/src/Css/MarkDownEditor.css
@@ -43,7 +43,7 @@
     --admonitionNoteBg: var(--mauve-4);
     --admonitionNoteBorder: var(--mauve-8);
 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: cursive;
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
     color: var(--baseText);
