--- a/frontend/src/Css/MarkDownEditor.css
+++ b/frontend/src/Css/MarkDownEditor.css
@@ -58,6 +58,7 @@
 .markDown {
     overflow: hidden;
     width: 100%;
+    height: 100%;
     position: relative;
     background-color: white;
     overflow-y: hidden;
