--- a/frontend/src/Css/register.css
+++ b/frontend/src/Css/register.css
@@ -1,5 +1,5 @@
 .login-wrapper {
-  font-family: cursive;
+  font-family: Aptos;
   display: flex;
   flex-direction: column;
   justify-content: center;
